# picar

./: .gitignore  CLAUDE.md  PROJECT_STATE.md  README.md  sim_test.sh
archive/old_scripts/: read_bag3.py  read_bag4.py  test_nmpc.py
archive/scratch/: scratch10.py  scratch11.py  scratch12.py  scratch13.py  scratch14.py  scratch15.py  scratch16.py  scratch17.py  scratch18.py  scratch19.py  scratch20.py  scratch8.py  scratch9.py
data/bags/: analyze_bag7.py
data/bags/bag_map1_test/: bag_map1_test_0.db3  metadata.yaml
data/bags/bag_map1_test_1/: bag_map1_test_1_0.db3  metadata.yaml
data/bags/bag_map1_test_2/: bag_map1_test_2_0.db3  metadata.yaml
data/bags/bag_map1_test_3/: bag_map1_test_3_0.db3  metadata.yaml
data/bags/bag_map1_test_4/: bag_map1_test_4_0.db3  metadata.yaml
data/bags/bag_map1_test_5/: bag_map1_test_5_0.db3  metadata.yaml
data/bags/bag_map1_test_6/: bag_map1_test_6_0.db3  metadata.yaml
data/bags/bag_map3_test/: bag_map3_test_0.db3  metadata.yaml
data/bags/bag_map3_test_1/: bag_map3_test_1_0.db3  metadata.yaml
data/bags/bag_map_test_10/: metadata.yaml
data/bags/bag_map_test_11/: metadata.yaml
data/bags/bag_map_test_7/: bag_map_test_7_0.db3  metadata.yaml
data/bags/bag_map_test_8/: metadata.yaml
data/bags/bag_map_test_9/: metadata.yaml
documents/plan/: 01_phase_current.md  02_phase_future.md  03_hardware.md
documents/state/: 01_pipeline.md  02_launch_commands.md  03_perception.md  04_nmpc.md  05_status_issues.md
documents/technical_docs/: 01_ARCHITECTURE_OVERVIEW.md  02_PERCEPTION_AND_EKF.md  03_NMPC_CONTROL_LOGIC.md  04_WORKFLOW_AND_TUNING.md
documents/technical_docs/code_explanation/: 01_perception_node.md  02_visualizer_node.md  03_grid_viewer.md  04_ekf_node.md  05_reset_node.md  06_mpc_node_part1.md  07_mpc_node_part2.md  08_acados_settings.md  09_bicycle_model.md  10_custom_messages.md  11_launch_and_world.md  INDEX.md
nmpc_build_6state/c_generated_code/: Makefile  acados_solver.pxd  acados_solver_Spatialbicycle_model.c  acados_solver_Spatialbicycle_model.h  main_Spatialbicycle_model.c  main_sim_Spatialbicycle_model.c
nmpc_build_6state/c_generated_code/Spatialbicycle_model_constraints/: Spatialbicycle_model_constr_h_fun_jac_uxt_zt.c
nmpc_build_6state/c_generated_code/Spatialbicycle_model_model/: Spatialbicycle_model_expl_ode_fun.c  Spatialbicycle_model_expl_vde_forw.c  Spatialbicycle_model_model.h
nmpc_build_map1/c_generated_code/: Makefile  main_sim_rc_car_kloeser.c
nmpc_build_map1/c_generated_code/rc_car_kloeser_cost/: rc_car_kloeser_cost_ext_cost_0_fun.c  rc_car_kloeser_cost_ext_cost_0_fun_jac_hess.c  rc_car_kloeser_cost_ext_cost_e_fun_jac.c  rc_car_kloeser_cost_ext_cost_fun.c  rc_car_kloeser_cost_ext_cost_fun_jac.c  rc_car_kloeser_cost_ext_cost_fun_jac_hess.c
nmpc_build_map3/c_generated_code/: Makefile  acados_sim_solver_rc_car_kloeser.c  acados_sim_solver_rc_car_kloeser.h
nmpc_build_map3/c_generated_code/rc_car_kloeser_cost/: rc_car_kloeser_cost_ext_cost_0_fun.c  rc_car_kloeser_cost_ext_cost_fun.c  rc_car_kloeser_cost_ext_cost_fun_jac_hess.c
nmpc_build_map3/c_generated_code/rc_car_kloeser_model/: rc_car_kloeser_expl_vde_forw.c
resources/test10/: README.md  run.sh
resources/test10/c_generated_code/: Makefile  acados_sim_solver_Spatialbicycle_model.c  acados_solver_Spatialbicycle_model.c
resources/test10/src/gazebo_ackermann_steering_vehicle/: CMakeLists.txt  package.xml
resources/test10/src/gazebo_ackermann_steering_vehicle/config/: params.yaml  ros_gz_bridge.yaml
resources/test10/src/gazebo_ackermann_steering_vehicle/include/: drive_model.hpp  joystick_controller.hpp  keyboard_controller.hpp  vehicle_controller.hpp
resources/test10/src/gazebo_ackermann_steering_vehicle/launch/: joystick.launch.py  vehicle.launch.py
resources/test10/src/gazebo_ackermann_steering_vehicle/model/: README.md  vehicle.xacro
resources/test10/src/gazebo_ackermann_steering_vehicle/model/track/: model.config  model.sdf
resources/test10/src/gazebo_ackermann_steering_vehicle/model/track/materials/scripts/: track.material
resources/test10/src/gazebo_ackermann_steering_vehicle/nodes/nmpc/: NMPC_NOTES.md  README_MERGE.txt  nmpc_controller.cpp  nmpc_sketch.hpp  nmpc_solver_class_example.hpp  nmpc_support.hpp  progress.md
resources/test10/src/gazebo_ackermann_steering_vehicle/nodes/odom_filter/: odom_filter_node.cpp
resources/test10/src/gazebo_ackermann_steering_vehicle/src/: drive_model.cpp  instruction.md  joystick_controller.cpp  keyboard_controller.cpp  vehicle_controller.cpp
resources/test10/src/gazebo_ackermann_steering_vehicle/worlds/: track.world
resources/test10/src/image_processing/: CMakeLists.txt  image_processing.md  package.xml
resources/test10/src/image_processing/include/: image_declarations.h
resources/test10/src/image_processing/launch/: image_processing.launch.py
resources/test10/src/image_processing/src/: camera_publisher.cpp  image_fitting.cpp  image_functions.cpp  image_processor.cpp
scripts/: plot_bag.py
src/ekf_pkg/: package.xml  setup.py
src/ekf_pkg/ekf_pkg/: ekf_node.py  reset_node.py
src/gazebo_ackermann_steering_vehicle/: CMakeLists.txt  package.xml
src/gazebo_ackermann_steering_vehicle/config/: parameters.yaml  ros_gz_bridge.yaml
src/gazebo_ackermann_steering_vehicle/launch/: sim_full_launch.py  (+3 more)
src/lane_msgs/: CMakeLists.txt  package.xml
src/lane_msgs/msg/: LaneState.msg  VehicleState.msg
src/mpc_pkg/: package.xml  setup.py
src/perception_pkg/: package.xml  setup.py
(+53 files in other folders)
